// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group block transforms to Columns block 1`] = `
"<!-- fp:columns -->
<div class="fp-block-columns"><!-- fp:column {"width":"100%"} -->
<div class="fp-block-column" style="flex-basis:100%"><!-- fp:group -->
<div id="this-is-another-anchor" class="fp-block-group"><!-- fp:paragraph -->
<p>One.</p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p>Two</p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p>Three.</p>
<!-- /fp:paragraph --></div>
<!-- /fp:group --></div>
<!-- /fp:column --></div>
<!-- /fp:columns -->"
`;

exports[`Group block transforms ungroups block 1`] = `
"<!-- fp:paragraph -->
<p>One.</p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p>Two</p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p>Three.</p>
<!-- /fp:paragraph -->"
`;
